<resources>
    <string name="app_name">Trivia</string>
    <string name="title">Trivia</string>
    <string name="true_title">true</string>
    <string name="false_title">false</string>
    <string name="previous_button">previous button</string>
    <string name="next_button">next button</string>
    <string name="counter_questions">0 / 0</string>
    <string name="wrong_answer">Wrong!</string>
    <string name="correct_answer">Correct!</string>
    <string name="share_text">SHARE</string>
</resources>